Autocomplete/Input: Add dropdown styles, fix chevron, errors
* Add dropdown styles; fix chevron

* Fix Input component according latest Zeplin

* Update Input and Autocomplete components ui


* Custom css scroll for webkit


* Add divider style

* error colors - simplify

* remove empty css state, fix hover css, improve readability

* fix back scrollbar. fix long text going over chevron

* remove height from each item (support multiple lines)

* fix failing test of ErrorMessageWrapper

* add e2e to autocomplete open state

--- a/src/components/Autocomplete/Autocomplete.st.css
+++ b/src/components/Autocomplete/Autocomplete.st.css
@@ -11,41 +11,115 @@
 :import {
     -st-from: "../Input/Input.st.css";
     -st-default: Input;
-    -st-named: inputStyling;
+    -st-named: inputStyling, color, colorDisabled, borderColor, borderColorHover, borderColorDisabled, font;
 }
 
 :import {
     -st-from: "../../palette.st.css";
-    -st-named: errorColor, emptyErrorColor;
+    -st-named: errorColor;
 }
 
-
 :vars {
-    font: wixApply(font, "Body-M")
+    optionColor: value(color);
+    optionColorHover: wixApply(opacity, value(optionColor), 0.6);
 }
 
 .root {
     -st-extends: CoreAutocomplete;
-    -st-states: error, empty;
-    -st-mixin: inputStyling;
-
+    -st-states: error;
+    -st-mixin: inputStyling; /*Apply same styling as the Input*/
     width: 100%;
+}
+
+.root:hover {
+    border-color: value(borderColorHover);
+}
+
+.root:disabled {
+    border-color: value(borderColorDisabled);
 }
 
 .root:error {
     border-color: value(errorColor);
 }
 
-.root:empty:error {
-    border-color: value(emptyErrorColor);
-}
-
 .root::inputComponent {
     -st-mixin: Input;
     display: flex;
     align-items: center;
+    border: 0; /*Border is set on the root*/
 }
 
-.suffix {
-    padding-right: 14px;
+.root::inputComponent::nativeInput {
+    padding-right: 42px;
 }
+
+.root::popoverContent {
+    margin-left: -1px;
+    width: calc(100% + 2px);
+    border-color: value(borderColor);
+}
+
+.root::dropdownContent::optionsContainer {
+    max-height: 284px;
+}
+
+.root::dropdownContent::dropdownOption {
+    box-sizing: border-box;
+    padding: 10px 14px;
+    font: value(font);
+    color: value(optionColor);
+}
+
+.root::dropdownContent::dropdownOption:hovered {
+    background-color: unset;
+    color: value(optionColorHover)
+}
+
+.root::divider:not(:customDivider) {
+    background-color: value(optionColor);
+}
+
+/*Scrollbar*/
+.root::dropdownContent::optionsContainer::-webkit-scrollbar {
+    width: 24px;
+    background-color: unset;
+}
+
+.root::dropdownContent::optionsContainer::-webkit-scrollbar-button {
+    height: 6px;
+}
+
+.root::dropdownContent::optionsContainer::-webkit-scrollbar-thumb {
+    background-color: wixApply(opacity, value(color), 0.2);
+    border-radius: 12px;
+    background-clip: padding-box;
+    border: 10px solid rgba(0, 0, 0, 0);
+    height: 61px;
+}
+
+/*Suffix icon*/
+.suffix {
+    display: flex;
+    position: absolute;
+    right: 14px;
+}
+
+.arrowIcon {
+    fill: value(color);
+}
+
+.root:disabled .arrowIcon {
+    fill: value(colorDisabled);
+}
+
+/*!*RTL*!*/
+/*:global(.rtl) .suffix {*/
+    /*left: 14px;*/
+    /*right: unset;*/
+/*}*/
+
+/*:global(.rtl) .root::inputComponent::nativeInput {*/
+    /*padding-right: unset;*/
+    /*padding-left: 42px;*/
+/*}*/
